[package]
name = "junctions"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eds = { git = "https://github.com/urbanslug/eds.git" }
ndarray-to-img = { git = "https://github.com/urbanslug/ndarray-to-img.git" }
ndarray = "0.15.6"
petgraph = "0.6.2"
generalized_suffix_tree = "1.2.1"